--- a/www/Activition-Phone.html
+++ b/www/Activition-Phone.html
@@ -23,11 +23,11 @@
         </div>
         <div data-role="content" style="margin-top: 50px">
         	<div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">邀请码：</p>
-                </div>
-                <div class="ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The InviteCode field is required." id="InviteCode" name="InviteCode" type="text" value="" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The InviteCode field is required." id="InviteCode" name="InviteCode" type="text" value="" placeholder="填写邀请码"/>
                 </div>
             </div>
             <div>
