--- a/www/ResetPassword-Phone.html
+++ b/www/ResetPassword-Phone.html
@@ -23,19 +23,19 @@
         </div>
         <div data-role="content" style="margin-top: 50px">
         	<div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">新密码：</p>
-                </div>
-                <div class="ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The NewPassword field is required." id="NewPassword" name="NewPassword" type="password" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The NewPassword field is required." id="NewPassword" name="NewPassword" type="password" placeholder="填写新密码"/>
                 </div>
             </div>
     		<div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">确认新密码：</p>
-                </div>
-                <div class="ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The ConfirmPassword field is required." id="ConfirmPassword" name="ConfirmPassword" type="password" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The ConfirmPassword field is required." id="ConfirmPassword" name="ConfirmPassword" type="password" placeholder="再次填写新密码"/>
                 </div>
             </div>
             <div>
