--- a/www/LogOn-Phone.html
+++ b/www/LogOn-Phone.html
@@ -40,19 +40,20 @@
   		</div>
         <div data-role="content" style="margin-top: 50px">
             <div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">用户名：</p>
-                </div>
-                <div class="ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The UserId field is required." id="UserId" name="UserId" type="text" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The UserId field is required." id="UserId" name="UserId" type="text" placeholder="您的手机号码"/>
+                    <label for="AlertUserId" id="AlertUserId" style="color:red; display:none">请输入11位手机号码</label>
                 </div>
             </div>
             <div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">密 码：</p>
-                </div>
-                <div class = "ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The Password field is required." id="Password" name="Password" type="password" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The Password field is required." id="Password" name="Password" type="password" placeholder="填写密码"/>
                 </div>
             </div>
             <div>
