--- a/www/Verification-Phone.html
+++ b/www/Verification-Phone.html
@@ -28,19 +28,20 @@
         </div>
         <div data-role="content" style="margin-top: 50px">
         	<div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">用户名：</p>
-                </div>
-                <div class="ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The UserId field is required." id="UserId" name="UserId" type="text" value="" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The UserId field is required." id="UserId" name="UserId" type="text" value="" placeholder="您的手机号码"/>
+                    <label for="AlertUserId" id="AlertUserId" style="color:red; display:none">请输入11位手机号码</label>	
                 </div>
             </div>
     		<div class="testgrid1">
-                <div class = "ui-block-a">
+                <!--<div class = "ui-block-a">
                     <p class="text-nowrap">验证码：</p>
-                </div>
-                <div class="ui-block-b">
-                    <input class="form-control" data-val="true" data-val-required="The ValidateCode field is required." id="ValidateCode" name="ValidateCode" type="text" value="" />
+                </div>-->
+                <div>
+                    <input class="form-control" data-val="true" data-val-required="The ValidateCode field is required." id="ValidateCode" name="ValidateCode" type="text" value="" placeholder="填写您收到的验证码"/>
                 </div>
             </div>
         	<div style="margin-top:20px">
