--- a/www/SMS.html
+++ b/www/SMS.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<title>融云测试</title>
+<title>交流</title>
 <head>
 <meta http-equiv="pragma" content="no-cache"  />
 <meta http-equiv="content-type" content="no-cache, must-revalidate" />
@@ -16,8 +16,7 @@
 <script src="jquery-mobile/jquery-2.1.3.js"></script>
 <script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
 <script type="text/javascript" src="js/CommonUtility.js"></script>
-<script type="text/javascript" src="js/SMS.js"></script>
-
+<script type="text/javascript" src="js/Resize.js"></script>
 <script>
 //强制使用长链接
 //      window.WEB_XHR_POLLING = true;
@@ -62,14 +61,18 @@
 
  
   <div data-role="content">
-    <div class="NormalField" id="MainField"> </div>
-    <table width="100%">
-      <tr>
-        <td align="center" width="84%"><textarea id="SMSContent" style="font-size:20px;"></textarea></td>
-        <!--<td align="center" width="84%"><input type="text" id="SMSContent" MultiLine="true"/></td>-->
-       <td align="center" width="10%"><button type="button" id="SMSbtn"> 发送</button></td>
-      </tr>
-    </table>
+    <div  style="position:relative;margin-top:40px;" id= "GenaralField">
+      <div id= "OutField" style="position:absolute; width: 99%;">
+        <div class="NormalField" id="MainField"> </div>
+        <table width="100%">
+          <tr>
+            <td align="center" width="89%"><textarea id="SMSContent" style="font-size:20px; padding:1px;margin:5px;"></textarea></td>
+            <td></td>
+            <td align="center" width="10%" valign="bottom"><button type="button" id="SMSbtn"> 发送</button></td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
   
  <div data-role="footer" data-id="foo1" data-position="fixed">
@@ -93,32 +96,7 @@
             </ul>
         </div><!-- /navbar -->
 	</div>
-  
-
 </div>
 </body>
-<script>
-	var ThisUserId = window.localStorage.getItem("ID");
-	var TheOtherId = window.localStorage.getItem("DoctorId");
-	var piUserId = window.localStorage.getItem("ID");
-	var piTerminalName = "Y-PHONE";
-	var piTerminalIP = window.localStorage.getItem("TerminalIP");
-	var Device = window.localStorage.getItem("Device");
-	var piDeviceType = (Device == "Phone")?1:0;
-	
-	var ClickFlag = true;
-	var AppKey = "sfci50a7chxxi";
-	
-	$(document).ready(function(event){
-	  $("#DoctorName").html(window.localStorage.getItem("DoctorName"));
-	  $("#DoctorPhoto").attr("src", window.localStorage.getItem("DoctorPhoto"));
-	  GetSMSDialogue(ThisUserId, TheOtherId);
-	  document.getElementById('MainField').scrollTop = document.getElementById('MainField').scrollHeight;
-	  
-	  var SMSBtn = document.getElementById('SMSbtn');	
-	  SMSBtn.addEventListener("mouseover", ChangeFlagToF, false);
-	  SMSBtn.addEventListener("mouseout", ChangeFlagToT, false);
-	  SMSBtn.addEventListener("click", submitSMS, false); //rongyun 20150615
-	})
-</script>
+<script type="text/javascript" src="js/SMS.js"></script>
 </html>
