李山 phone 修改 进度条样式 切换按钮修改

--- a/www/Target.html
+++ b/www/Target.html
@@ -159,7 +159,7 @@
   <div data-role="header">
     <h1>近一周体征数据</h1>
                 <div class="ui-btn-right">
-            <a id="Refresh" href="#" data-role="button" data-icon="refresh" data-iconpos="notext" onClick="window.location.reload(); ">Refresh</a>
+            <a id="Refresh" href="#" data-role="button" data-icon="refresh" data-iconpos="notext" onClick="GetDetails()">Refresh</a>
         </div>
     <div data-role="navbar">
           <ul>
