--- a/www/Target.html
+++ b/www/Target.html
@@ -41,7 +41,7 @@
        <h2 style="margin-top:-40px" id="PatientName"></h2> 
        <div data-role="navbar">
           <ul>
-            <li><a href="#" data-role="button" data-icon="home" class="ui-btn-active ui-state-persist" onclick="GetImplementationForPhone(PatientId, Module)" >目标主页</a></li>
+            <li><a href="#" data-role="button" data-icon="home" class="ui-btn-active ui-state-persist" onclick="" >目标主页</a></li>
            <li><a href="#pagetwo" data-role="button" data-icon="grid" onclick="GetDetails()">查看详细</a></li>
         </ul>
       </div>
@@ -121,11 +121,8 @@
               <p id="RemainingDays" style="font-size:14px;color:#0048CC;"></p>
            </div>
        </div>-->
-        <div id="proRate" style="margin-top:-20px;">
-         <dl class="barbox" >
-		    
-		    <dd class="last" style="margin-left:0px;"><span id="planRate"></span><span id="RemainingDays"></span></dd> 
-	     </dl>
+        <div id="proRate" style="margin-top:-15px;text-align:center;" >
+         <p style="color:#0048CC;font-size:14px;margin-bottom:0px;"><span id="planRate"></span><span id="RemainingDays"></span></p>
          </div>
 
        
@@ -169,7 +166,7 @@
     <div data-role="navbar">
           <ul>
             <li><a href="javascript:history.go(-1);" data-icon="home" data-role="button">目标主页</a></li>
-           <li><a href="#pagetwo" data-role="button" data-icon="grid" onclick="GetDetailsReload()" class="ui-btn-active ui-state-persist" >查看详细</a></li>
+           <li><a href="#pagetwo" data-role="button" data-icon="grid" onclick="" class="ui-btn-active ui-state-persist" >查看详细</a></li>
         </ul>
     </div> 
   </div>
