--- a/www/Loading-Phone.html
+++ b/www/Loading-Phone.html
@@ -92,14 +92,14 @@
 										}
 									},
 									error: function(msg) {
-										alert("数据库连接失败");	
+										//alert("数据库连接失败");	
 										location.href = "LogOn-Phone.html";
 									}
 								});	
 							}
 						},
 						error: function(msg) {
-							alert("数据库连接失败");
+							//alert("数据库连接失败");
 							location.href = "LogOn-Phone.html";	
 						}
 					});
