--- a/www/TaskMenu.html
+++ b/www/TaskMenu.html
@@ -72,7 +72,7 @@
                 <button onclick = "" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-edit">
                 	修改密码
                 </button>
-                <button onclick = "" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-gear">
+                <button onclick = "javascript: window.location.href='Settings.html'" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-gear">
                 	设置
                 </button>
                 <button onclick = "" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-info">
