--- a/www/StartMeasure.html
+++ b/www/StartMeasure.html
@@ -1,66 +1,118 @@
 ﻿<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-		<title>血压测量</title>
-	</head>
-	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.css" />
-	<link rel="stylesheet" href="css/CommonStyle.css">
-	<body>
-		<div data-role="header" style="height:30px;">
-        	<h2>血压测量</h2>
-			<a href="javascript: window.history.back(-1);" data-icon="back" data-iconpos="notext" data-shadow="false"
-                data-iconshadow="false">返回</a>
-			
-		</div>
-		<div align="center">
-			<p>
-				<font size="5">收缩压</font>
-			</p>
-<!--			<div align="center" style="height:60px; border-style:ridge; width:200px">-->
-            <div align="center">
-				<font size="6">
-<!--					<input type="input" id="SBPget" value="120" size="3" readonly="true" style="border:hidden; text-align:center" />-->
-<input type="input" id="SBPget" value="120" size="3"  style="border:hidden; text-align:center" />
-				</font>
-			</div>
-		</div>
-		<div align="center">
-			<p>
-				<font size="5">舒张压</font>
-			</p>
-			<!--<div align="center" style="height:60px; border-style:ridge; width:200px">-->
-            <div align="center">
-				<font size="6">
-<!--					<input type="input" id="DBPget" value="80" size="3" readonly="true" style="border:hidden; text-align:center" />-->
-<input type="input" id="DBPget" value="80" size="3"  style="border:hidden; text-align:center" />
-				</font>
-			</div>
-		</div>
-        <div align="center">
-			<p>
-				<font size="5">脉率</font>
-			</p>
-<!--			<div align="center" style="height:60px; border-style:ridge; width:200px">-->
-            <div align="center">
-				<font size="6">
-<!--					<input type="input" id="DBPget" value="80" size="3" readonly="true" style="border:hidden; text-align:center" />-->
-<input type="input" id="PulseF" value="80" size="3"  style="border:hidden; text-align:center" />
-				</font>
-			</div>
-		</div>
-		<p align="center">
-			<button id="btn" onclick="Test1();" style="width:150px">
-				<font size="5">保存</font>
-			</button>
-		</p>
-		<br/>
-	</body>
-	<script src="jquery-mobile/jquery-2.1.3.js"></script>
-	<script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
-	<script src="js/CommonUtility.js"></script>
-	<script src="js/jquery-spin.js"></script>   
-	<script type="text/javascript" src="js/StartMeasurre.js"></script>
-
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+<title>血压测量</title>
+</head>
+<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.css" />
+<link rel="stylesheet" href="css/CommonStyle.css">
+<body>
+<div data-role="header" style="height:30px;">
+  <h2>血压测量</h2>
+  <a href="javascript: window.history.back(-1);" data-icon="back" data-iconpos="notext" data-shadow="false"
+                data-iconshadow="false">返回</a> </div>
+<div align="center">
+  <p> <font size="5">收缩压</font> </p>
+  <!--			<div align="center" style="height:60px; border-style:ridge; width:200px">-->
+  <div align="center" style="width:160px"> <font size="6"> 
+    <!--					<input type="input" id="SBPget" value="120" size="3" readonly="true" style="border:hidden; text-align:center" />-->
+    <input type="tel" id="SBPget" value="120" size="3"  style="border:hidden; text-align:center; width:150px" />
+    </font> </div>
+</div>
+<div align="center">
+  <p> <font size="5">舒张压</font> </p>
+  <!--<div align="center" style="height:60px; border-style:ridge; width:200px">-->
+  <div align="center" style="width:160px"> <font size="6"> 
+    <!--					<input type="input" id="DBPget" value="80" size="3" readonly="true" style="border:hidden; text-align:center" />-->
+    <input type="tel" id="DBPget" value="80" size="3"  style="border:hidden; text-align:center; width:150px" />
+    </font> </div>
+</div>
+<div align="center">
+  <p> <font size="5">脉率</font> </p>
+  <!--			<div align="center" style="height:60px; border-style:ridge; width:200px">-->
+  <div align="center" style="width:160px"> <font size="6"> 
+    <!--					<input type="input" id="DBPget" value="80" size="3" readonly="true" style="border:hidden; text-align:center" />-->
+    <input type="tel" id="PulseF" value="80" size="3"  style="border:hidden; text-align:center; width:150px" />
+    </font> </div>
+</div>
+<p align="center">
+  <button id="btn" onclick="Test1();" style="width:150px"> <font size="5">保存</font> </button>
+</p>
+<p align="center">
+  <button id="TestBT"  style="width:150px"> <font size="5">测量血压</font> </button>
+ <!-- <input id="TestBT" type="button" value="蓝牙连接" style="width:150px"/>-->
+</p>
+<!--<p align="center">
+  <button onclick="BACK()"  style="width:150px"> <font size="5">BACK</font> </button>
+  <input id="TestBT" type="button" value="蓝牙连接" style="width:150px"/>
+</p>
+<input id="testPL" type="button" value="测试" />
+<input id="listBoundDevices" type="button" value="List Bluetooth Bound Devices" />
+<input id="connect" type="button" value="connect Device" />
+<input id="getData" type="button" value="getData" />
+<div id="result"></div>-->
+<div id="popdiv1" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert1">是否打开蓝牙？</p>
+    <button class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" style="vertical-align:middle" id="popbtn1">是</button>
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">否</a> </div>
+</div>
+<div id="popdiv2" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert2"></p>
+    <img src="img/history_loading.gif" /> 
+    <!--<button class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" style="vertical-align:middle" onclick="TestBt()">是</button> --> 
+  </div>
+</div>
+<div id="popdiv3" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert3">已配对设备</p>
+    <div id="DeviceList"></div>
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle" onclick="BACK()">退出</a> 
+  </div>
+</div>
+<div id="popdiv4" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert4">获取数据失败，请重新测试</p>
+    <button class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" style="vertical-align:middle" id="TestBT2">确定</button>
+    <!--<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">否</a> </div>-->
+</div>
+<div id="popdiv5" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alertS">舒张压：</p>
+    <p style="font-size:20px" id="alertD">收缩压：</p>
+    <p style="font-size:20px" id="alertP">脉率：</p>
+    <!--<button class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" style="vertical-align:middle" onclick="Test1()">保存</button>-->
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle" onclick="BACK()">确定</a> 
+    </div>
+</div>
+<div id="popdiv6" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert6"></p>
+    <button id="backtoMain" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle">是</button> 
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">否</a> </div>
+</div>
+<div id="popdiv7" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert7"></p>
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">确定</a> </div>
+</div>
+ <div id="popdiv8" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert8">正在测量，请稍候</p>
+    <img src="img/history_loading.gif" />  
+    <!--<button class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" style="vertical-align:middle" onclick="TestBt()">是</button> --> 
+  </div>
+</div>
+<br/>
+</body>
+<script src="jquery-mobile/jquery-2.1.3.js"></script>
+<script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
+<script src="js/CommonUtility.js"></script>
+<script src="js/jquery-spin.js"></script>
+<!--<script type="text/javascript" src="js/StartMeasurre.js"></script>-->
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="bluetooth.js"></script>
+<script type="text/javascript" src="js/StartMeasurre.js"></script>
 </html>
