TDY 20150720上传  201507北京出差修改
1.Loading-Phone.hml： 自动登录时如果对应角色被删除则跳转至登录页面

2.StartMeasure.html： 样式调整

3.Target.html： 样式调整byLS

4.Settings.js： 样式调整

5.StartMeasure.js： 1 将页面初始血压改为最新一次的测量值
		    2 样式调整
		    3 增加简单的血压情况提醒（与最近一次的血压值相比）

6.TaskMenu.js： 1 样式调整，将舒张压与收缩压合并为血压
		2 修改头像路径

7.target.js： 样式调整？byLS

Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/Loading-Phone.html
+++ b/www/Loading-Phone.html
@@ -78,14 +78,14 @@
 												if (Role == "Patient")
 												{
 													window.localStorage.setItem("AutoLogOn","Yes");
-													Patient = 1;
+													isPatient = 1;
 													//alert("登陆成功");	
 													setTimeout(function(){
 														location.href = "TaskMenu.html";
 													},1000)
 												}
 											});
-											if (Patient == 0)
+											if (isPatient == 0)
 											{
 												location.href = "LogOn-Phone.html";
 											}
