--- a/www/StartMeasure.html
+++ b/www/StartMeasure.html
@@ -67,9 +67,9 @@
 </div>
 <div id="popdiv3" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
   <div style="text-align:center">
-    <p style="font-size:20px" id="alert3">已配对设备</p>
+    <p style="font-size:20px" id="alert3">请选择设备</p>
     <div id="DeviceList"></div>
-    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle" onclick="BACK()">退出</a> 
+    <!--<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle" onclick="BACK()">退出</a> -->
   </div>
 </div>
 <div id="popdiv4" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
@@ -79,12 +79,13 @@
     <!--<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">否</a> </div>-->
 </div>
 <div id="popdiv5" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
-  <div style="text-align:center">
-    <p style="font-size:20px" id="alertS">舒张压：</p>
-    <p style="font-size:20px" id="alertD">收缩压：</p>
-    <p style="font-size:20px" id="alertP">脉率：</p>
+  <div style="text-align:center; margin-left:5px">
+    <p style="font-size:20px; text-align:left" id="alertS">您的收缩压：</p>
+    <p style="font-size:20px; text-align:left" id="alertD">您的舒张压：</p>
+    <p style="font-size:20px; text-align:left" id="alertP">您的脉率：</p>
+    <p style="font-size:20px; text-align:left" id="alertW"></p>
     <!--<button class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" style="vertical-align:middle" onclick="Test1()">保存</button>-->
-    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle" onclick="BACK()">确定</a> 
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle; text-align:center" onclick="BACK()">确定</a> 
     </div>
 </div>
 <div id="popdiv6" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
