苟玲 20150817 14:25 修改消息推送

--- a/www/Target.html
+++ b/www/Target.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="js/serial.js"></script>
     <script type="text/javascript" src="js/amstock.js"></script>
     <script type="text/javascript" src="js/CommonUtility.js"></script>
+    <script type="text/javascript" src="js/SMSsocket.io.js"></script> 
 
 </head>
 
