--- a/www/SMS.html
+++ b/www/SMS.html
@@ -17,6 +17,7 @@
 <script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
 <script type="text/javascript" src="js/CommonUtility.js"></script>
 <script type="text/javascript" src="js/Resize.js"></script>
+<script type="text/javascript" src="js/SMSsocket.io.js"></script> 
 <script>
 //强制使用长链接
 //      window.WEB_XHR_POLLING = true;
