苟玲 20150825 10:26 消息添加声音和震动

--- a/www/SMS.html
+++ b/www/SMS.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="js/CommonUtility.js"></script>
 <script type="text/javascript" src="js/Resize.js"></script>
 <script type="text/javascript" src="js/SMSsocket.io.js"></script> 
+<script type="text/javascript" src="cordova.js"></script>
 <script>
 //强制使用长链接
 //      window.WEB_XHR_POLLING = true;
