--- a/www/TaskMenu.html
+++ b/www/TaskMenu.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/CommonUtility.js"></script>
     <script type="text/javascript" src="js/TaskMenu.js"></script>
     <script type="text/javascript" src="js/SMSsocket.io.js"></script> 
+    <script type="text/javascript" src="cordova.js"></script> 
     <title>任务一览</title>
     
 </head>
