苟玲 20100825 17:02 风险评估

--- a/www/Risk.html
+++ b/www/Risk.html
@@ -17,8 +17,17 @@
         	<h1 id="title">并发症风险评估</h1>
     </div>
     <div data-role="content">
-    <div align="left">百分率/%</div>
-          <div id="chartdiv3" style="width:300px; height:500px" ></div></div>
+    <!--<div align="left">百分率/%</div>-->
+          <div id="chartdiv3" style="width:300px; height:500px;margin-top:80px;" >
+           <table style="font-size:15px;font-weight:bold;color:white;border-spacing:5px 5px;margin-left:35px;">
+        	<tr style="height:50px;"><td>高血压发生率：</td><td id = "Hyper" align="center" width="80px"></td></tr>
+        	<tr style="height:50px;"><td>高血压五年死亡率：</td><td id = "Harvard" align="center"></td></tr>
+        	<tr style="height:50px;"><td>心血管十年发病率：</td><td id = "Framingham" align="center"></td></tr>
+        	<tr style="height:50px;"><td>中风十年发生率：</td><td id = "Strokee" align="center"></td></tr>
+        	<tr style="height:50px;"><td>心衰发生率：</td><td id = "Heart" align="center"></td></tr>
+        	</table>
+          </div>
+          </div>
           </div>
 </body>
 <script src="jquery-mobile/jquery-2.1.3.js"></script>
