--- a/www/Loading-Phone.html
+++ b/www/Loading-Phone.html
@@ -12,7 +12,7 @@
    	<script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
    	<script type="text/javascript" src="js/CommonUtility.js"></script>
     <script type="text/javascript" src="js/LogOnRelated.js"></script>
-<!--    <script type="text/javascript" src="http://l2.io/ip.js?var=myip"></script>-->
+    <script type="text/javascript" src="http://l2.io/ip.js?var=myip"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
 		var width = $(document).width();
@@ -20,10 +20,10 @@
 		$('img').width(width);
 		$('img').height(height);
 		window.localStorage.setItem("Device","Phone");	
-		window.localStorage.setItem("TerminalName","Y-PHONE");
-		window.localStorage.setItem("DeviceType",1);
+		window.localStorage.setItem("TerminalName","Android");
+		window.localStorage.setItem("DeviceType",22);
 		var isPatient = 0;
-		var myip = '127.0.0.1';
+		//var myip = '127.0.0.1';
 		localStorage.setItem('TerminalIP', myip);
 		window.localStorage.setItem("Device","Phone");
 		//localStorage.setItem('TerminalIP', '127.0.0.1');
