--- a/www/LogOn-Phone.html
+++ b/www/LogOn-Phone.html
@@ -12,14 +12,14 @@
    	<script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
    	<script type="text/javascript" src="js/CommonUtility.js"></script>
     <script type="text/javascript" src="js/LogOnRelated.js"></script>
-<!--	<script type="text/javascript" src="http://l2.io/ip.js?var=myip"></script>-->
+	<script type="text/javascript" src="http://l2.io/ip.js?var=myip"></script>
    	<script type="text/javascript">
 		$().ready(function () {
-			var myip = '127.0.0.1';
+			//var myip = '127.0.0.1';
 			localStorage.setItem('TerminalIP', myip);
 		window.localStorage.setItem("Device","Phone");	
-		window.localStorage.setItem("TerminalName","Y-PHONE");
-		window.localStorage.setItem("DeviceType",1);
+		window.localStorage.setItem("TerminalName","Android");
+		window.localStorage.setItem("DeviceType",22);
 			if (ID != "" || ID != null)
 			{
 				$('#UserId').val(ID);
