--- a/www/SMS.html
+++ b/www/SMS.html
@@ -30,7 +30,7 @@
 <body>
 <div data-role="page">
   <div data-role="header">
-            <div id="imgtest-round" style="margin-left:10px;width:40px;height:40px;border-radius:100px;border:2px solid #fff;overflow:hidden;-webkit-box-shadow:0 0 3px #ccc;box-shadow:0 0 3px #ccc;" onclick="$('#Info').panel('open')">
+            <div id="imgtest-round" style="margin-left:10px;width:40px;height:40px;border-radius:100px;border:2px solid #fff;overflow:hidden;-webkit-box-shadow:0 0 3px #ccc;box-shadow:0 0 3px #ccc;"> <!--onclick="$('#Info').panel('open')">-->
                 <img id="DoctorPhoto" style="width:100%;min-height:100%; text-align:center;" alt="头像" />
             </div>
              	<div class="ui-btn-right">
