--- a/www/TaskMenu.html
+++ b/www/TaskMenu.html
@@ -96,7 +96,7 @@
                 <button onclick = "" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-cloud">
                 	账号绑定
                 </button>
-                <button onclick = "" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-edit">
+                <button onclick = "javascript: window.location.href='ChangePassword-Phone.html'" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-edit">
                 	修改密码
                 </button>
                 <button onclick = "javascript: window.location.href='Settings.html'" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-gear">
