--- a/www/Loading-Phone.html
+++ b/www/Loading-Phone.html
@@ -12,8 +12,9 @@
    	<script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
    	<script type="text/javascript" src="js/CommonUtility.js"></script>
     <script type="text/javascript" src="js/LogOnRelated.js"></script>
-    <script type="text/javascript" src="http://l2.io/ip.js?var=myip"></script>
+    <!--<script type="text/javascript" src="http://l2.io/ip.js?var=myip"></script>-->
 	<script type="text/javascript">
+	
 	$(document).ready(function(){
 		var width = $(document).width();
 		var height = $(document).height();
@@ -23,9 +24,11 @@
 		window.localStorage.setItem("TerminalName","Android");
 		window.localStorage.setItem("DeviceType",22);
 		var isPatient = 0;
-		//var myip = '127.0.0.1';
+		var myip = '127.0.0.1';
 		localStorage.setItem('TerminalIP', myip);
 		window.localStorage.setItem("Device","Phone");
+		
+
 		//localStorage.setItem('TerminalIP', '127.0.0.1');
 			if (AutoLogOn == "Yes")	
 			{
