--- a/www/Settings.html
+++ b/www/Settings.html
@@ -65,5 +65,17 @@ div#BTDiv.ui-grid-b .ui-block-c { width: 5%}
         </div>
     </div>
 </div>
+<div id="popdiv1" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert1">是否取消配对？</p>
+    <p style="font-size:20px" id="alert3" style="display:none"></p>
+    <button id="unpair" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a"  style="vertical-align:middle" onclick="unpair()">是</button> 
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">否</a> </div>
+</div>
+<div id="popdiv2" data-role="popup" class="ui-content" style="width:250px;padding-left: 1px;padding-right: 1px;padding-bottom: 0px;padding-top: 1px;" data-dismissible="false">
+  <div style="text-align:center">
+    <p style="font-size:20px" id="alert2"></p>
+    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-a" data-rel="back" style="vertical-align:middle">确定</a> </div>
+</div>
 </body>
 </html>
